--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -43,7 +43,9 @@
   font-size: 1.1rem; /* Tamaño de fuente adecuado */
   line-height: 1.8; /* Espaciado entre líneas */
   margin-bottom: 2rem; /* Espacio inferior */
-  color: var(--primary-color); /* Color del texto */
+ /* color: var(--primary-color); /* Color del texto */
+  background: var(--primary-color);
+  color: var(--neutral-color);
 }
 
 .soft-skills {
