--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -153,7 +153,7 @@
 
 .job {
   margin-bottom: 2rem;
-  border: 1px solid var(--complementary-color);
+  border: 0px solid var(--complementary-color);
   border-radius: 10px;
   overflow: hidden;
 }
@@ -187,5 +187,6 @@
 .job-details ul {
   list-style: disc;
   margin-left: 1.5rem;
+  color: var(--neutral-color);
 }
 </style>
